src/objects/ExternalServicesObjectFieldMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <description>Default Value</description>
        <inlineHelpText>Default Value</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <description>Field API Name</description>
        <inlineHelpText>Field API Name</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappingProperty__c</fullName>
        <description>Mapping Property</description>
        <inlineHelpText>Mapping Property</inlineHelpText>
        <label>Mapping Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <description>Object API Name</description>
        <inlineHelpText>Object API Name</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <description>Service Name</description>
        <inlineHelpText>Service Name</inlineHelpText>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Object_Property__c</fullName>
        <description>JSON Object Property</description>
        <inlineHelpText>JSON Object Property</inlineHelpText>
        <label>JSON Object Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Parent_Object_Property__c</fullName>
        <description>JSON Parent Object Property</description>
        <inlineHelpText>JSON Parent Object Property</inlineHelpText>
        <label>JSON Parent Object Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order</description>
        <inlineHelpText>Order</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentFieldAPIName__c</fullName>
        <description>Parent Field API Name</description>
        <inlineHelpText>Parent Field API Name</inlineHelpText>
        <label>Parent Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQLWhereCriteria__c</fullName>
        <description>Additional SOQL where criteria - inject additional criteria into SOQL where clause</description>
        <inlineHelpText>Additional SOQL where criteria</inlineHelpText>
        <label>SOQL Where Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
  <description>External Service Object / Field Mapping Configuration</description>
  <label>External Services Object/Field Mapping</label>
  <pluralLabel>External Services Object/Field Mapping</pluralLabel>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>ServiceName__c</columns>
        <columns>Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>DefaultValue__c</columns>
        <columns>FieldAPIName__c</columns>
        <columns>MappingProperty__c</columns>
        <columns>ObjectAPIName__c</columns>
        <columns>JSON_Parent_Object_Property__c</columns>
        <columns>ParentFieldAPIName__c</columns>
        <columns>SOQLWhereCriteria__c</columns>
        <columns>JSON_Object_Property__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
    </listViews>
    <listViews>
        <fullName>Baydocs</fullName>
        <columns>Order__c</columns>
        <columns>ServiceName__c</columns>
        <columns>MasterLabel</columns>
        <columns>DefaultValue__c</columns>
        <columns>FieldAPIName__c</columns>
        <columns>ObjectAPIName__c</columns>
        <columns>ParentFieldAPIName__c</columns>
        <columns>MappingProperty__c</columns>
        <columns>JSON_Object_Property__c</columns>
        <columns>JSON_Parent_Object_Property__c</columns>
        <columns>SOQLWhereCriteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceName__c</field>
            <operation>equals</operation>
            <value>Baydocs</value>
        </filters>
        <label>Baydocs</label>
    </listViews>
    <listViews>
        <fullName>OnBase</fullName>
        <columns>MasterLabel</columns>
        <columns>Order__c</columns>
        <columns>ObjectAPIName__c</columns>
        <columns>FieldAPIName__c</columns>
        <columns>MappingProperty__c</columns>
        <columns>JSON_Object_Property__c</columns>
        <columns>JSON_Parent_Object_Property__c</columns>
        <columns>ParentFieldAPIName__c</columns>
        <columns>ServiceName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>OnBase</value>
        </filters>
        <label>OnBase</label>
    </listViews>
</CustomObject>